--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css?_v=20230312213620"/>
-	<link rel="stylesheet" href="css/style.min.css?_v=20230312213620">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css?_v=20230314120542"/>
+	<link rel="stylesheet" href="css/style.min.css?_v=20230314120542">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -103,8 +103,9 @@
                   <ul>
                      <li><a class="hover__effect-line" href="price.html">Сторінка Ціни</a></li>
                      <li><a class="hover__effect-line" href="about.html">Сторінка Про нас</a></li>
-                     <li><a class="hover__effect-line" href="coworking.html">Сторінка Швейний коворкінг</a></li>
+                     <li><a class="hover__effect-line" href="tips.html">Сторінка Поради</a></li>
                      <li><a class="hover__effect-line" href="sewing-studio.html">Сторінка Кравецька студія</a></li>
+                     <li><a class="hover__effect-line" href="sewing-coworking.html">Сторінка Швейний коворkінг</a></li>
                   </ul>
                </div>
             </section>
@@ -149,8 +150,9 @@
 		</div>
 	</div>
 </div> -->
-      <script src="js/tabs.js?_v=20230312213620"></script>
-<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js?_v=20230312213620"></script>
-<script src="js/app.js?_v=20230312213620"></script>
+      <script src="js/tabs.js?_v=20230314120542"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js?_v=20230314120542"></script>
+<script src="js/spollers.js?_v=20230314120542"></script>
+<script src="js/app.js?_v=20230314120542"></script>
    </body>
 </html>
