--- a/price.html
+++ b/price.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css?_v=20230312213620"/>
-	<link rel="stylesheet" href="css/style.min.css?_v=20230312213620">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css?_v=20230314120542"/>
+	<link rel="stylesheet" href="css/style.min.css?_v=20230314120542">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -495,8 +495,9 @@
 		</div>
 	</div>
 </div> -->
-      <script src="js/tabs.js?_v=20230312213620"></script>
-<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js?_v=20230312213620"></script>
-<script src="js/app.js?_v=20230312213620"></script>
+      <script src="js/tabs.js?_v=20230314120542"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js?_v=20230314120542"></script>
+<script src="js/spollers.js?_v=20230314120542"></script>
+<script src="js/app.js?_v=20230314120542"></script>
    </body>
 </html>
