--- a/sewing-courses-.html
+++ b/sewing-courses-.html
@@ -5,14 +5,14 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css?_v=20230315140445"/>
-	<link rel="stylesheet" href="css/style.min.css?_v=20230315140445">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css?_v=20230315131414"/>
+	<link rel="stylesheet" href="css/style.min.css?_v=20230315131414">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
    <body>
-      <div class="wrapper tips">
+      <div class="wrapper">
          <header class="header">
 	<div class="header__container">
 		<div class="header__row">
@@ -29,28 +29,28 @@
 				</div>
 				<ul class="header__items">
 					<li class="header__link">
-						<a href="index.html">Головна</a>
+						<a href="#">Головна</a>
 					</li>
 					<li class="header__link">
-						<a href="about.html">Про нас</a>
+						<a href="#">Про нас</a>
 					</li>
 					<li class="header__link">
-						<a href="tips.html">Поради</a>
+						<a href="#">Поради</a>
 					</li>
 					<li class="header__link">
 						<a href="#">Контакти</a>
 					</li>
 					<li class="menu-item brown small">
-						<a href="price.html">Ціни</a>
+						<a href="#">Ціни</a>
 					</li>
 					<li class="menu-item blue">
-						<a href="sewing-studio.html">Кравецька студія</a>
+						<a href="#">Кравецька студія</a>
 					</li>
 					<li class="menu-item purple">
-						<a href="sewing-coworking.html">Швейний коворкінг</a>
+						<a href="#">Швейний коворкінг</a>
 					</li>
 					<li class="menu-item pink">
-						<a href="sewing-courses.html">Швейні курси</a>
+						<a href="#">Швейні курси</a>
 					</li>
 				</ul>
 				<div class="header__info">
@@ -91,29 +91,6 @@
 							 Передзвонити вам?
 						</a>
 					</div>
-
-					<ul class="socials socials-mobile">
-						<li class="socials-item">
-							 <a href="#">
-									<img src="img/icons/socials/facebook.svg" alt="">
-							 </a>
-						</li>
-						<li class="socials-item">
-							 <a href="#">
-									<img src="img/icons/socials/instagram.svg" alt="">
-							 </a>
-						</li>
-						<li class="socials-item">
-							 <a href="#">
-									<img src="img/icons/socials/telegram.svg" alt="">
-							 </a>
-						</li>
-						<li class="socials-item">
-							 <a href="#">
-									<img src="img/icons/socials/viber.svg" alt="">
-							 </a>
-						</li>
-					</ul>
 				</div>
 			</div>
 			<div class="header__burger">
@@ -123,19 +100,16 @@
 	</div>
 </header>
          <main>
-            <section class="starter yellow">
+            <section class="starter pink small">
                <div class="starter__container">
                   <div class="starter__row">
                      <div class="starter__text">
                         <div class="starter__title">
-                           <h1>Поради</h1>
-                        </div>
-                        <div class="starter__subtitle">
-                           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, sequi.</p>
+                           <h1>Дитячі швейні курси</h1>
                         </div>
                      </div>
                      <div class="starter__img">
-                        <picture><source srcset="img/photos/advices-img.webp" type="image/webp"><img src="img/photos/advices-img.png" alt=""></picture>
+                        <picture><source srcset="img/photos/dutshk-img.webp" type="image/webp"><img src="img/photos/dutshk-img.png" alt=""></picture>
                      </div>
                   </div>
                </div>
@@ -147,6 +121,8 @@
                         <div class="swiper-slide">
                            <div class="info-item">
                               <div class="info-item__img">
+                                 <div class="info-item__top-text info-item__price">650 грн</div>
+                                 <div class="info-item__top-text info-item__date">10.01.2023</div>
                                  <picture><source srcset="img/photos/card1.webp" type="image/webp"><img src="img/photos/card1.png" alt=""></picture>
                               </div>
                               <div class="info-item__content">
@@ -158,6 +134,8 @@
                         <div class="swiper-slide">
                            <div class="info-item">
                               <div class="info-item__img">
+                                 <div class="info-item__top-text info-item__price">650 грн</div>
+                                 <div class="info-item__top-text info-item__date">10.01.2023</div>
                                  <picture><source srcset="img/photos/card2.webp" type="image/webp"><img src="img/photos/card2.png" alt=""></picture>
                               </div>
                               <div class="info-item__content">
@@ -169,6 +147,8 @@
                         <div class="swiper-slide">
                            <div class="info-item">
                               <div class="info-item__img">
+                                 <div class="info-item__top-text info-item__price">650 грн</div>
+                                 <div class="info-item__top-text info-item__date">10.01.2023</div>
                                  <picture><source srcset="img/photos/card3.webp" type="image/webp"><img src="img/photos/card3.png" alt=""></picture>
                               </div>
                               <div class="info-item__content">
@@ -180,6 +160,8 @@
                         <div class="swiper-slide">
                            <div class="info-item">
                               <div class="info-item__img">
+                                 <div class="info-item__top-text info-item__price">650 грн</div>
+                                 <div class="info-item__top-text info-item__date">10.01.2023</div>
                                  <picture><source srcset="img/photos/card1.webp" type="image/webp"><img src="img/photos/card1.png" alt=""></picture>
                               </div>
                               <div class="info-item__content">
@@ -191,6 +173,8 @@
                         <div class="swiper-slide">
                            <div class="info-item">
                               <div class="info-item__img">
+                                 <div class="info-item__top-text info-item__price">650 грн</div>
+                                 <div class="info-item__top-text info-item__date">10.01.2023</div>
                                  <picture><source srcset="img/photos/card2.webp" type="image/webp"><img src="img/photos/card2.png" alt=""></picture>
                               </div>
                               <div class="info-item__content">
@@ -202,6 +186,8 @@
                         <div class="swiper-slide">
                            <div class="info-item">
                               <div class="info-item__img">
+                                 <div class="info-item__top-text info-item__price">650 грн</div>
+                                 <div class="info-item__top-text info-item__date">10.01.2023</div>
                                  <picture><source srcset="img/photos/card1.webp" type="image/webp"><img src="img/photos/card1.png" alt=""></picture>
                               </div>
                               <div class="info-item__content">
@@ -213,6 +199,8 @@
                         <div class="swiper-slide">
                            <div class="info-item">
                               <div class="info-item__img">
+                                 <div class="info-item__top-text info-item__price">650 грн</div>
+                                 <div class="info-item__top-text info-item__date">10.01.2023</div>
                                  <picture><source srcset="img/photos/card2.webp" type="image/webp"><img src="img/photos/card2.png" alt=""></picture>
                               </div>
                               <div class="info-item__content">
@@ -224,6 +212,8 @@
                         <div class="swiper-slide">
                            <div class="info-item">
                               <div class="info-item__img">
+                                 <div class="info-item__top-text info-item__price">650 грн</div>
+                                 <div class="info-item__top-text info-item__date">10.01.2023</div>
                                  <picture><source srcset="img/photos/card3.webp" type="image/webp"><img src="img/photos/card3.png" alt=""></picture>
                               </div>
                               <div class="info-item__content">
@@ -235,6 +225,8 @@
                         <div class="swiper-slide">
                            <div class="info-item">
                               <div class="info-item__img">
+                                 <div class="info-item__top-text info-item__price">650 грн</div>
+                                 <div class="info-item__top-text info-item__date">10.01.2023</div>
                                  <picture><source srcset="img/photos/card1.webp" type="image/webp"><img src="img/photos/card1.png" alt=""></picture>
                               </div>
                               <div class="info-item__content">
@@ -245,9 +237,6 @@
                         </div>
                      </div>
                      <div class="swiper-pagination info-pagination"></div>
-                  </div>
-                  <div class="info__items">
-
                   </div>
                </div>
             </section>
@@ -356,28 +345,26 @@
 	<div class="footer__container">
 		<div class="footer__row">
 			<div class="footer__logo">
-				<a href="index.html">
-					<img src="img/logo_white.svg" alt="">
-				</a>
+				<img src="img/logo_white.svg" alt="">
 			</div>
 			<ul class="footer__links">
-				<li class="footer__link"><a class="hover__effect-line" href="index.html">Головна</a></li>
-				<li class="footer__link"><a class="hover__effect-line" href="about.html">Про нас</a></li>
-				<li class="footer__link"><a class="hover__effect-line" href="tips.html">Поради</a></li>
+				<li class="footer__link"><a class="hover__effect-line" href="#">Головна</a></li>
+				<li class="footer__link"><a class="hover__effect-line" href="#">Про нас</a></li>
+				<li class="footer__link"><a class="hover__effect-line" href="#">Поради</a></li>
 				<li class="footer__link"><a class="hover__effect-line" href="#">Контакти</a></li>
 			</ul>
 			<div class="footer__items">
 				<div class="menu-item brown">
-					<a href="price.html">Ціни</a>
+					<a href="#">Ціни</a>
 				</div>
 				<div class="menu-item blue">
-					<a href="sewing-studio.html">Кравецька студія</a>
+					<a href="#">Кравецька студія</a>
 				</div>
 				<div class="menu-item white">
-					<a href="sewing-coworking.html">Швейний коворкінг</a>
+					<a href="#">Швейний коворкінг</a>
 				</div>
 				<div class="menu-item pink">
-					<a href="sewing-courses.html">Швейні курси</a>
+					<a href="#">Швейні курси</a>
 				</div>
 			</div>
 		</div>
@@ -394,9 +381,9 @@
 		</div>
 	</div>
 </div> -->
-      <script src="js/tabs.js?_v=20230315140445"></script>
-<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js?_v=20230315140445"></script>
-<script src="js/spollers.js?_v=20230315140445"></script>
-<script src="js/app.js?_v=20230315140445"></script>
+      <script src="js/tabs.js?_v=20230315131414"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js?_v=20230315131414"></script>
+<script src="js/spollers.js?_v=20230315131414"></script>
+<script src="js/app.js?_v=20230315131414"></script>
    </body>
 </html>
