--- a/blank-page.html
+++ b/blank-page.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css?_v=20230314120542"/>
-	<link rel="stylesheet" href="css/style.min.css?_v=20230314120542">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css?_v=20230315140445"/>
+	<link rel="stylesheet" href="css/style.min.css?_v=20230315140445">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,46 +16,83 @@
          <header class="header">
 	<div class="header__container">
 		<div class="header__row">
-			<div class="header__logo">
-				<a href="index.html">
-					<img src="img/logo.svg" alt="">
-				</a>
-			</div>
 			<div class="header__logo-mobile">
 				<a href="index.html">
 					<picture><source srcset="img/longo.webp" type="image/webp"><img src="img/longo.png" alt=""></picture>
 				</a>
 			</div>
-			<ul class="header__items">
-				<li class="header__link">
-					<a href="#">Головна</a>
-				</li>
-				<li class="header__link">
-					<a href="#">Про нас</a>
-				</li>
-				<li class="header__link">
-					<a href="#">Поради</a>
-				</li>
-				<li class="header__link">
-					<a href="#">Контакти</a>
-				</li>
-				<li class="menu-item brown small">
-					<a href="#">Ціни</a>
-				</li>
-				<li class="menu-item blue">
-					<a href="#">Кравецька студія</a>
-				</li>
-				<li class="menu-item purple">
-					<a href="#">Швейний коворкінг</a>
-				</li>
-				<li class="menu-item pink">
-					<a href="#">Швейні курси</a>
-				</li>
-			</ul>
-			<div class="header__info">
-				<div class="header__schedule">
-					<p>Графік роботи <br> Без вихідних 9-21</p>
-					<ul class="socials">
+			<div class="header__nav">				
+				<div class="header__logo">
+					<a href="index.html">
+						<img src="img/logo.svg" alt="">
+					</a>
+				</div>
+				<ul class="header__items">
+					<li class="header__link">
+						<a href="index.html">Головна</a>
+					</li>
+					<li class="header__link">
+						<a href="about.html">Про нас</a>
+					</li>
+					<li class="header__link">
+						<a href="tips.html">Поради</a>
+					</li>
+					<li class="header__link">
+						<a href="#">Контакти</a>
+					</li>
+					<li class="menu-item brown small">
+						<a href="price.html">Ціни</a>
+					</li>
+					<li class="menu-item blue">
+						<a href="sewing-studio.html">Кравецька студія</a>
+					</li>
+					<li class="menu-item purple">
+						<a href="sewing-coworking.html">Швейний коворкінг</a>
+					</li>
+					<li class="menu-item pink">
+						<a href="sewing-courses.html">Швейні курси</a>
+					</li>
+				</ul>
+				<div class="header__info">
+					<div class="header__schedule">
+						<p>Графік роботи <br> Без вихідних 9-21</p>
+						<ul class="socials">
+							<li class="socials-item">
+								 <a href="#">
+										<img src="img/icons/socials/facebook.svg" alt="">
+								 </a>
+							</li>
+							<li class="socials-item">
+								 <a href="#">
+										<img src="img/icons/socials/instagram.svg" alt="">
+								 </a>
+							</li>
+							<li class="socials-item">
+								 <a href="#">
+										<img src="img/icons/socials/telegram.svg" alt="">
+								 </a>
+							</li>
+							<li class="socials-item">
+								 <a href="#">
+										<img src="img/icons/socials/viber.svg" alt="">
+								 </a>
+							</li>
+						</ul>
+					</div>
+					
+					<div class="header__call-back contacts__content-item__text">
+						<div class="df">
+							 <a href="#" class="hover__effect-line">097 977 97 97</a>
+						</div>
+						<div class="df">
+							 <a href="#" class="hover__effect-line">097 977 97 97</a>
+						</div>
+						<a href="#" class="contacts__content-link hover__effect-line">
+							 Передзвонити вам?
+						</a>
+					</div>
+
+					<ul class="socials socials-mobile">
 						<li class="socials-item">
 							 <a href="#">
 									<img src="img/icons/socials/facebook.svg" alt="">
@@ -78,18 +115,6 @@
 						</li>
 					</ul>
 				</div>
-				
-				<div class="header__call-back contacts__content-item__text">
-					<div class="df">
-						 <a href="#" class="hover__effect-line">097 977 97 97</a>
-					</div>
-					<div class="df">
-						 <a href="#" class="hover__effect-line">097 977 97 97</a>
-					</div>
-					<a href="#" class="contacts__content-link hover__effect-line">
-						 Передзвонити вам?
-					</a>
-				</div>
 			</div>
 			<div class="header__burger">
 				<span></span>
@@ -103,26 +128,28 @@
 	<div class="footer__container">
 		<div class="footer__row">
 			<div class="footer__logo">
-				<img src="img/logo_white.svg" alt="">
+				<a href="index.html">
+					<img src="img/logo_white.svg" alt="">
+				</a>
 			</div>
 			<ul class="footer__links">
-				<li class="footer__link"><a class="hover__effect-line" href="#">Головна</a></li>
-				<li class="footer__link"><a class="hover__effect-line" href="#">Про нас</a></li>
-				<li class="footer__link"><a class="hover__effect-line" href="#">Поради</a></li>
+				<li class="footer__link"><a class="hover__effect-line" href="index.html">Головна</a></li>
+				<li class="footer__link"><a class="hover__effect-line" href="about.html">Про нас</a></li>
+				<li class="footer__link"><a class="hover__effect-line" href="tips.html">Поради</a></li>
 				<li class="footer__link"><a class="hover__effect-line" href="#">Контакти</a></li>
 			</ul>
 			<div class="footer__items">
 				<div class="menu-item brown">
-					<a href="#">Ціни</a>
+					<a href="price.html">Ціни</a>
 				</div>
 				<div class="menu-item blue">
-					<a href="#">Кравецька студія</a>
+					<a href="sewing-studio.html">Кравецька студія</a>
 				</div>
 				<div class="menu-item white">
-					<a href="#">Швейний коворкінг</a>
+					<a href="sewing-coworking.html">Швейний коворкінг</a>
 				</div>
 				<div class="menu-item pink">
-					<a href="#">Швейні курси</a>
+					<a href="sewing-courses.html">Швейні курси</a>
 				</div>
 			</div>
 		</div>
@@ -139,9 +166,9 @@
 		</div>
 	</div>
 </div> -->
-      <script src="js/tabs.js?_v=20230314120542"></script>
-<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js?_v=20230314120542"></script>
-<script src="js/spollers.js?_v=20230314120542"></script>
-<script src="js/app.js?_v=20230314120542"></script>
+      <script src="js/tabs.js?_v=20230315140445"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js?_v=20230315140445"></script>
+<script src="js/spollers.js?_v=20230315140445"></script>
+<script src="js/app.js?_v=20230315140445"></script>
    </body>
 </html>
